--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -1,10 +1,8 @@
-
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accessibilityEventTypes="typeWindowStateChanged|typeViewClicked|typeViewTextChanged|typeWindowsChanged"
+    android:accessibilityEventTypes="typeViewClicked|typeViewTextChanged|typeWindowStateChanged|typeWindowsChanged"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:notificationTimeout="50"
     android:canPerformGestures="true"
-    android:canRetrieveWindowContent="true"
-    android:description="@string/accessibility_desc"
-    android:summary="@string/accessibility_summary"
-    android:accessibilityFlags="flagDefault|flagIncludeNotImportantViews|flagReportViewIds" />
+    android:settingsActivity=""
+    android:description="@string/app_name"
+    android:accessibilityFlags="flagDefault" />
